# ScholarWeave

./: .gitignore  ORCHESTRATOR.md  README.md  README.zh-CN.md  WORK_PLAN.md  install.sh  pyproject.toml  uninstall.sh  update.sh
config/: dailypaper-user-config.json
config/skills/build-idea/: SKILL.md
config/skills/consolidate-chat/: SKILL.md
config/skills/design-validation/: SKILL.md
config/skills/distill-question/: SKILL.md
config/skills/ingest/: SKILL.md
config/skills/lint/: SKILL.md
config/skills/log-iteration/: SKILL.md
config/skills/orchestrate/: SKILL.md
config/skills/search-papers/: SKILL.md
config/templates/: idea.md  meta.yaml  paper.md  question.md
docs/: USAGE.md
scholarweave/: __init__.py  cli.py  experiment.py  ingest.py  search.py  util.py
vault/: index.md
